--- a/contactus.html
+++ b/contactus.html
@@ -37,20 +37,20 @@
     <p class="text-blue-700 mt-2">Silakan berikan masukan Anda untuk pengembangan Farhan Library.</p>
   </header>
 
-  <!-- Formulir -->
+  <!-- Formulir dengan Formspree -->
   <main class="flex-grow flex justify-center items-center px-4">
-    <form action="https://formsubmit.co/farhansyadira25@gmail.com" method="POST" class="bg-white shadow-md rounded-lg p-6 w-full max-w-lg space-y-4">
+    <form action="https://formspree.io/f/xjkwlbaj" method="POST" class="bg-white shadow-md rounded-lg p-6 w-full max-w-lg space-y-4">
       <div>
         <label for="name" class="block text-blue-800 font-semibold">Nama:</label>
-        <input type="text" id="name" name="name" placeholder="Masukkan nama Anda" required class="w-full p-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-300">
+        <input type="text" id="name" name="name" placeholder="Masukkan nama Anda" required class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-300">
       </div>
       <div>
         <label for="email" class="block text-blue-800 font-semibold">Email:</label>
-        <input type="email" id="email" name="email" placeholder="Masukkan email Anda" required class="w-full p-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-300">
+        <input type="email" id="email" name="email" placeholder="Masukkan email Anda" required class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-300">
       </div>
       <div>
         <label for="message" class="block text-blue-800 font-semibold">Kritik dan Saran:</label>
-        <textarea id="message" name="message" rows="5" placeholder="Masukkan kritik dan saran" required class="w-full p-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-300"></textarea>
+        <textarea id="message" name="message" rows="5" placeholder="Masukkan kritik dan saran" required class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-300"></textarea>
       </div>
       <button type="submit" class="bg-blue-800 text-white px-6 py-2 rounded hover:bg-blue-700 transition">
         Kirim
